Added muscle command to travis-ci.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
+os: osx
+
+osx_image: xcode10
+
 language: python
+
 python:
   - "2.7"
+
+before_install:
+  - brew tap brewsci/bio
+  - brew outdated muscle || brew upgrade muscle
 
 install:
   - make setup
