--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ deploy:
     file_glob: true
     on:
       repo: penuts7644/pygor
-      branch: master
+      branch: /^issue-.*/
 
 after-deploy:
   - ./github_release.sh
