Dev requirements, travis-ci and setup file updates

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
 [metadata]
 # Include the license file in the wheel.
 license_file = LICENSE.txt
+
+[semantic_release]
+version_variable = setup.py:VERSION
+check_build_status = True
+upload_to_pypi = False
