--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,4 @@
 pytest>=3.8.2
-twine>=1.12.1
-git+git://github.com/cfpb/github-changelog@master
+twine==1.11.0
+requests==2.9.1
+python-semantic-release>=3.11.2
