Update to travis-ci and enable pypi upload

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,4 +49,4 @@ development =
 [semantic_release]
 version_variable = pygor/__init__.py:__version__
 check_build_status = True
-upload_to_pypi = False
+upload_to_pypi = True
