Added setuptools upgrade

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 
 install:
   - sudo apt-get install muscle
-  - pip install --upgrade pip
+  - pip install --upgrade pip && pip install --upgrade setuptools
   - make setup
 
 branches:
