--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,14 @@ install_requires =
     biopython>=1.72
 
 
+[options.extras_require]
+development =
+    pytest>=3.8.2
+    twine==1.11.0
+    requests==2.9.1
+    python-semantic-release>=3.11.2
+
+
 [semantic_release]
 version_variable = pygor/__init__.py:__version__
 check_build_status = True
