--- a/setup.cfg
+++ b/setup.cfg
@@ -41,12 +41,5 @@ install_requires =
 [options.extras_require]
 development =
     pytest>=3.8.2
-    twine==1.11.0
-    requests==2.9.1
-    python-semantic-release>=3.11.2
-
-
-[semantic_release]
-version_variable = pygor/__init__.py:__version__
-check_build_status = True
-upload_to_pypi = True
+    twine>=1.12.1
+    requests>=2.19.1
