Fix travis build error

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,3 +30,15 @@ keywords = IGoR, Bio-Informatics, Recombination, Sequencing, Analysis, DNA, Mode
 zip_safe = False
 include_package_data = True
 packages = pygor
+install_requires =
+    pandas>=0.23.4
+    numpy>=1.15.2
+    scipy>=1.1.0
+    matplotlib==2.2.3
+    biopython>=1.72
+
+
+[options.extras_require]
+development =
+    pytest>=3.8.2
+    twine>=1.12.1
