Updated requirements install and version constant location

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 # Include the license file in the wheel.
 [metadata]
 name = pygor
-version = attr: pygor.__version__
+version = 1.0.1
 url = https://github.com/penuts7644/pygor
 author = Wout van Helvoirt
 author_email = wout.van.helvoirt@icloud.com
@@ -36,6 +36,7 @@ install_requires =
     scipy>=1.1.0
     matplotlib==2.2.3
     biopython>=1.72
+    pathos>=0.2.2.1
 
 
 [options.extras_require]
