Added additional info and changed version number

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 # Include the license file in the wheel.
 [metadata]
 name = pygor
-version = 1.0.1
+version = 0.1.0
 url = https://github.com/penuts7644/pygor
 author = Wout van Helvoirt
 author_email = wout.van.helvoirt@icloud.com
@@ -10,8 +10,9 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 license_file = LICENSE.txt
 classifiers =
-    Development Status :: 5 - Production/Stable
+    Development Status :: 4 - Beta
     Intended Audience :: Developers
+    Intended Audience :: Science/Research
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Natural Language :: English
     Operating System :: OS Independent
@@ -19,11 +20,11 @@ classifiers =
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
     Topic :: Scientific/Engineering :: Bio-Informatics
+    Topic :: Scientific/Engineering :: Information Analysis
     Topic :: Scientific/Engineering :: Medical Science Apps.
 project_urls =
-    IGoR Source = https://github.com/qmarcou/IGoR
     Bug Reports = https://github.com/penuts7644/pygor/issues
-keywords = IGoR, Bio-Informatics, Recombination, Sequencing, Analysis, DNA, Model, Genes
+keywords = Bio-Informatics, Recombination, Sequencing, Analysis, DNA, Model, Genes, Kmer
 
 
 [options]
@@ -43,3 +44,7 @@ install_requires =
 development =
     pytest>=3.8.2
     twine>=1.12.1
+
+[options.entry_points]
+console_scripts =
+    pygor = pygor.__main__:main
