Added OLGA requirement and updated test data files

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ classifiers =
     Topic :: Scientific/Engineering :: Medical Science Apps.
 project_urls =
     Bug Reports = https://github.com/penuts7644/pygor/issues
-keywords = Bio-Informatics, Recombination, Sequencing, Analysis, DNA, Model, Genes, Kmer
+keywords = Bio-Informatics, Recombination, Sequencing, Analysis, DNA, Model, Genes, Kmer, Immune, Probs, Probability
 
 
 [options]
@@ -38,6 +38,7 @@ install_requires =
     matplotlib==2.2.3
     biopython>=1.72
     pathos>=0.2.2.1
+    olga>=1.0.1
 
 
 [options.extras_require]
