Updated naming of package

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 # Include the license file in the wheel.
 [metadata]
-name = immunoprobs
+name = immuno-probs
 version = 0.1.0
 url = https://github.com/penuts7644/ImmunoProbs
 author = Wout van Helvoirt
@@ -30,7 +30,7 @@ keywords = Bio-Informatics, Recombination, Sequencing, Analysis, DNA, Model, Gen
 [options]
 zip_safe = False
 include_package_data = True
-packages = immunoprobs
+packages = immuno_probs
 install_requires =
     pandas>=0.23.4
     numpy>=1.15.2
@@ -48,4 +48,4 @@ development =
 
 [options.entry_points]
 console_scripts =
-    immunoprobs = immunoprobs.__main__:main
+    immuno-probs = immuno_probs.__main__:main
