--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - sudo apt-get install muscle
   - pip install --upgrade pip
   - pip install --upgrade setuptools
-  - pip install -r requirements-travis.txt
+  - pip install -r requirements_travis.txt
 
 script:
   - make test
