--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 # Include the license file in the wheel.
 [metadata]
 name = immuno-probs
-version = 0.1.0
+version = 0.1.1
 url = https://github.com/penuts7644/ImmunoProbs
 author = Wout van Helvoirt
 author_email = wout.van.helvoirt@icloud.com
@@ -30,7 +30,7 @@ keywords = Bio-Informatics, Recombination, Sequencing, Analysis, DNA, Model, Gen
 [options]
 zip_safe = False
 include_package_data = True
-packages = immuno_probs
+packages = find:
 install_requires =
     pandas>=0.23.4
     numpy>=1.15.2
