Updated location of main cli file

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,4 +48,4 @@ development =
 
 [options.entry_points]
 console_scripts =
-    immuno-probs = immuno_probs.__main__:main
+    immuno-probs = immuno_probs.cli.__main__:main
