Added the data files to the setup configuration file

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ keywords = Bio-Informatics, Recombination, Sequencing, Analysis, DNA, Model, Gen
 
 [options]
 zip_safe = False
-include_package_data = True
+include_package_data = False
 packages = find:
 install_requires =
     pandas>=0.23.4
@@ -40,7 +40,6 @@ install_requires =
     pathos>=0.2.2.1
     olga>=1.0.2
 
-
 [options.extras_require]
 development =
     pytest>=3.8.2
@@ -49,3 +48,36 @@ development =
 [options.entry_points]
 console_scripts =
     immuno-probs = immuno_probs.cli.__main__:main
+
+[options.data_files]
+human_b_heavy =
+    immuno_probs/data/human_b_heavy/genomic_D.fasta
+    immuno_probs/data/human_b_heavy/genomic_J.fasta
+    immuno_probs/data/human_b_heavy/genomic_V.fasta
+    immuno_probs/data/human_b_heavy/J_gene_CDR3_anchors.csv
+    immuno_probs/data/human_b_heavy/model_marginals.txt
+    immuno_probs/data/human_b_heavy/model_params.txt
+    immuno_probs/data/human_b_heavy/V_gene_CDR3_anchors.csv
+human_t_alpha =
+    immuno_probs/data/human_t_alpha/genomic_J.fasta
+    immuno_probs/data/human_t_alpha/genomic_V.fasta
+    immuno_probs/data/human_t_alpha/J_gene_CDR3_anchors.csv
+    immuno_probs/data/human_t_alpha/model_marginals.txt
+    immuno_probs/data/human_t_alpha/model_params.txt
+    immuno_probs/data/human_t_alpha/V_gene_CDR3_anchors.csv
+human_t_beta =
+    immuno_probs/data/human_t_beta/genomic_D.fasta
+    immuno_probs/data/human_t_beta/genomic_J.fasta
+    immuno_probs/data/human_t_beta/genomic_V.fasta
+    immuno_probs/data/human_t_beta/J_gene_CDR3_anchors.csv
+    immuno_probs/data/human_t_beta/model_marginals.txt
+    immuno_probs/data/human_t_beta/model_params.txt
+    immuno_probs/data/human_t_beta/V_gene_CDR3_anchors.csv
+mouse_t_beta =
+    immuno_probs/data/mouse_t_beta/genomic_D.fasta
+    immuno_probs/data/mouse_t_beta/genomic_J.fasta
+    immuno_probs/data/mouse_t_beta/genomic_V.fasta
+    immuno_probs/data/mouse_t_beta/J_gene_CDR3_anchors.csv
+    immuno_probs/data/mouse_t_beta/model_marginals.txt
+    immuno_probs/data/mouse_t_beta/model_params.txt
+    immuno_probs/data/mouse_t_beta/V_gene_CDR3_anchors.csv
