--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ keywords = Bio-Informatics, Recombination, Sequencing, Analysis, DNA, Model, Gen
 
 [options]
 zip_safe = False
-include_package_data = False
+include_package_data = True
 packages = find:
 install_requires =
     pandas>=0.23.4
@@ -49,35 +49,9 @@ development =
 console_scripts =
     immuno-probs = immuno_probs.cli.__main__:main
 
-[options.data_files]
-human_b_heavy =
-    immuno_probs/data/human_b_heavy/genomic_D.fasta
-    immuno_probs/data/human_b_heavy/genomic_J.fasta
-    immuno_probs/data/human_b_heavy/genomic_V.fasta
-    immuno_probs/data/human_b_heavy/J_gene_CDR3_anchors.csv
-    immuno_probs/data/human_b_heavy/model_marginals.txt
-    immuno_probs/data/human_b_heavy/model_params.txt
-    immuno_probs/data/human_b_heavy/V_gene_CDR3_anchors.csv
-human_t_alpha =
-    immuno_probs/data/human_t_alpha/genomic_J.fasta
-    immuno_probs/data/human_t_alpha/genomic_V.fasta
-    immuno_probs/data/human_t_alpha/J_gene_CDR3_anchors.csv
-    immuno_probs/data/human_t_alpha/model_marginals.txt
-    immuno_probs/data/human_t_alpha/model_params.txt
-    immuno_probs/data/human_t_alpha/V_gene_CDR3_anchors.csv
-human_t_beta =
-    immuno_probs/data/human_t_beta/genomic_D.fasta
-    immuno_probs/data/human_t_beta/genomic_J.fasta
-    immuno_probs/data/human_t_beta/genomic_V.fasta
-    immuno_probs/data/human_t_beta/J_gene_CDR3_anchors.csv
-    immuno_probs/data/human_t_beta/model_marginals.txt
-    immuno_probs/data/human_t_beta/model_params.txt
-    immuno_probs/data/human_t_beta/V_gene_CDR3_anchors.csv
-mouse_t_beta =
-    immuno_probs/data/mouse_t_beta/genomic_D.fasta
-    immuno_probs/data/mouse_t_beta/genomic_J.fasta
-    immuno_probs/data/mouse_t_beta/genomic_V.fasta
-    immuno_probs/data/mouse_t_beta/J_gene_CDR3_anchors.csv
-    immuno_probs/data/mouse_t_beta/model_marginals.txt
-    immuno_probs/data/mouse_t_beta/model_params.txt
-    immuno_probs/data/mouse_t_beta/V_gene_CDR3_anchors.csv
+[options.package_data]
+immuno_probs =
+    default_models/human_b_heavy/*
+    default_models/human_t_alpha/*
+    default_models/human_t_beta/*
+    default_models/mouse_t_beta/*
