Rename of data directory

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ console_scripts =
 
 [options.package_data]
 immuno_probs =
-    default_models/human_b_heavy/*
-    default_models/human_t_alpha/*
-    default_models/human_t_beta/*
-    default_models/mouse_t_beta/*
+    data/human_b_heavy/*
+    data/human_t_alpha/*
+    data/human_t_beta/*
+    data/mouse_t_beta/*
