Updated the copyright statement

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ version = 0.1.6
 url = https://github.com/penuts7644/ImmunoProbs
 author = Wout van Helvoirt
 author_email = wout.van.helvoirt@icloud.com
-description = ImmunoProbs Python package able to calculate the generation probability of V(D)J and CDR3 sequences.
+description = Create IGoR models and calculate the generation probability of V(D)J and CDR3 sequences.
 long_description = file: README.md
 long_description_content_type = text/markdown
 license_file = LICENSE.txt
