added fasta and csv file checking functions plus spinner requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ install_requires =
     biopython>=1.72
     pathos>=0.2.2.1
     olga>=1.0.2
+    halo>=0.0.23
 
 [options.extras_require]
 development =
