Added default ini file for immunoprobs settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ console_scripts =
 
 [options.package_data]
 immuno_probs =
+    config/*
     data/human_b_heavy/*
     data/human_t_alpha/*
     data/human_t_beta/*
