small fixes plus improvements to the default values in the ini file

--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -1,19 +1,19 @@
 [ImmunoProbs]
 
 ; The number of threads. If not given, use max available to system.
-NUM_THREADS =
+NUM_THREADS
 
-; The separator character for file in/out.
-SEPARATOR = ,
+; The separator character for file in/out. If not given, use comma character.
+SEPARATOR
 
-; The working directory for ImmunoProbs. Current if not given.
-WORKING_DIR =
+; The working directory for ImmunoProbs. Current directory, if not given.
+WORKING_DIR
+
+; Output filename (or prefix).
+OUT_NAME
 
 ; The name of the temporary directory used by ImmunoProbs.
 TEMP_DIR = immuno_probs_tmp
-
-; Output filename (or prefix).
-OUT_NAME =
 
 ; The default motifs for the V gene.
 V_MOTIFS = TGT,TGC
