update file separator from comma to tab

--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -3,7 +3,7 @@
 ; The number of threads. If not given, use max available to system.
 NUM_THREADS
 
-; The separator character for file in/out. If not given, use comma character.
+; The separator character for file in/out. If not given, use tab.
 SEPARATOR
 
 ; The working directory for ImmunoProbs. Current directory, if not given.
