Added allele and family validation to the evaluate option. Pgen's are now summed for multiple given gene choices.

--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -21,6 +21,9 @@ V_MOTIFS = TGT,TGC
 ; The default motifs for the J gene.
 J_MOTIFS = TGG,TTC,TTT
 
+; The allele value when data file allelel values should not be used.
+ALLELE = 01
+
 ; Name of the column containing sequence indices
 I_COL = seq_index
 
