--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -21,7 +21,7 @@ V_MOTIFS = TGT,TGC
 ; The default motifs for the J gene.
 J_MOTIFS = TGG,TTC,TTT
 
-; The allele value when data file allelel values should not be used.
+; The allele value when data file allele values should not be used.
 ALLELE = 01
 
 ; Name of the column containing sequence indices
