--- a/setup.cfg
+++ b/setup.cfg
@@ -32,9 +32,9 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires =
-    pandas>=0.23.4
-    numpy>=1.15.2
-    scipy>=1.1.0
+    pandas==0.24.*
+    numpy>=1.15.2,<1.17.0
+    scipy>=1.1.0,<1.2.2
     matplotlib==2.2.4
     biopython>=1.72
     pathos>=0.2.2.1
