Added sphinx documentation requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,8 @@ install_requires =
 development =
     pytest>=3.8.2
     twine>=1.12.1
+    sphinx>=1.8.5
+    sphinx-rtd-theme>=0.4.3
 
 [options.entry_points]
 console_scripts =
