--- a/requirements_travis.txt
+++ b/requirements_travis.txt
@@ -4,6 +4,8 @@ scipy>=1.1.0,<1.2.2
 matplotlib==2.2.4
 biopython>=1.72
 pathos>=0.2.2.1
+olga>=1.0.2
 pytest>=3.8.2
 twine>=1.12.1
-olga>=1.0.2
+sphinx>=1.8.5
+sphinx-rtd-theme>=0.4.3
