system's temp directory is now used for running immuno_probs

--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -6,7 +6,7 @@ NUM_THREADS
 ; The separator character for file in/out. If not given, use tab.
 SEPARATOR
 
-; The working directory for ImmunoProbs. Current directory, if not given.
+; The directory for ImmunoProbs for writing files to. Current directory, if not given.
 WORKING_DIR
 
 ; Output filename (or prefix).
