--- a/setup.cfg
+++ b/setup.cfg
@@ -6,8 +6,8 @@ url = https://github.com/penuts7644/ImmunoProbs
 author = Wout van Helvoirt
 author_email = wout.van.helvoirt@icloud.com
 description = Create IGoR models and calculate the generation probability of V(D)J and CDR3 sequences.
-long_description = file: README.md
-long_description_content_type = text/markdown
+long_description = file: README.rst
+long_description_content_type = text/x-rst
 license_file = LICENSE.txt
 classifiers =
     Development Status :: 4 - Beta
