updated the structure of the configuration file

--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -17,22 +17,18 @@ WORKING_DIR
 ; ImmunoProbs tool.
 OUT_NAME
 
-; Contains advanced parameters that can only be modified through this
-; configuration file.
-[ADVANCED]
+
+
+; Contains expert parameters that should never have to be modified.
+[EXPERT]
 
 ; The name of the temporary directory used by ImmunoProbs.
 TEMP_DIR = immuno_probs_tmp
 
-; The default search motifs for the V gene.
-V_MOTIFS = TGT,TGC
 
-; The default search motifs for the J gene.
-J_MOTIFS = TGG,TTC,TTT
 
-; The allele value to use when allele information from the input date should
-; not be used.
-ALLELE = 01
+; Common parameters used for multiple tools in ImmunoProbs.
+[COMMON]
 
 ; Name of the column containing the sequence indices.
 I_COL = seq_index
@@ -57,3 +53,23 @@ D_GENE_COL = gene_choice_d
 
 ; Name of the column containing the J gene choice string.
 J_GENE_COL = gene_choice_j
+
+
+
+; Parameters specific for the 'locate_cdr3_anchors' tool.
+[LOCATE_CDR3_ANCHORS]
+
+; The default search motifs for the V gene.
+V_MOTIFS = TGT,TGC
+
+; The default search motifs for the J gene.
+J_MOTIFS = TGG,TTC,TTT
+
+
+
+; Parameters specific for the 'evaluate_seqs' tool.
+[EVALUATE_SEQS]
+
+; The allele value to use when allele information from the input date should
+; not be used.
+ALLELE = 01
