--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -22,6 +22,10 @@ OUT_NAME
 ; Contains expert parameters that should never have to be modified.
 [EXPERT]
 
+; Should ImmunoProbs the system's temporary directory (default) or use the
+; WORKING_DIR location?
+USE_SYSTEM_TEMP = true
+
 ; The name of the temporary directory used by ImmunoProbs.
 TEMP_DIR = immuno_probs_tmp
 
