small fix ini file and added documenation for setting up a user specific config file

--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -1,79 +1,48 @@
-; Contains basic parameters that can also be overwritten through commandline
-; execution of ImmunoProbs.
+; Contains basic parameters that can also be overwritten through commandline execution of ImmunoProbs.
 [BASIC]
-
-; The number of threads the system can use. If not given, the max available
-; threads to system are used.
+; The number of threads the system can use. If not given, the max available threads to system are used.
 NUM_THREADS
-
 ; The separator character for file in/out. If not given, use tab character.
 SEPARATOR
-
-; The directory for ImmunoProbs for writing files to. ImmunoProbs will use the
-; current directory, if not specified.
+; The directory for ImmunoProbs for writing files to. ImmunoProbs will use the current directory, if not specified.
 WORKING_DIR
-
-; The output filename (or prefix value) that should be used for any given
-; ImmunoProbs tool.
+; The output filename (or prefix value) that should be used for any given ImmunoProbs tool.
 OUT_NAME
 
-
-
-; Contains expert parameters that should never have to be modified.
+; Contains expert parameters that should never have to be modified with normal usage of ImmunoProbs.
 [EXPERT]
-
-; Should ImmunoProbs the system's temporary directory (default) or use the
-; WORKING_DIR location?
+; Should ImmunoProbs use the system's temporary directory (default) or use the WORKING_DIR location?
 USE_SYSTEM_TEMP = true
-
 ; The name of the temporary directory used by ImmunoProbs.
 TEMP_DIR = immuno_probs_tmp
 
-
-
 ; Common parameters used for multiple tools in ImmunoProbs.
 [COMMON]
-
 ; Name of the column containing the sequence indices.
 I_COL = seq_index
-
 ; Name of the column containing the nucleotide sequences.
 NT_COL = nt_sequence
-
 ; Name of the column containing the nucleotide pgen scores.
 NT_P_COL = nt_pgen_estimate
-
 ; Name of the column containing the amino acid sequences.
 AA_COL = aa_sequence
-
 ; Name of the column containing the amino acid pgen scores.
 AA_P_COL = aa_pgen_estimate
-
 ; Name of the column containing the V gene choice string.
 V_GENE_COL = gene_choice_v
-
 ; Name of the column containing the D gene choice string.
 D_GENE_COL = gene_choice_d
-
 ; Name of the column containing the J gene choice string.
 J_GENE_COL = gene_choice_j
 
-
-
 ; Parameters specific for the 'locate_cdr3_anchors' tool.
 [LOCATE_CDR3_ANCHORS]
-
 ; The default search motifs for the V gene.
 V_MOTIFS = TGT,TGC
-
 ; The default search motifs for the J gene.
 J_MOTIFS = TGG,TTC,TTT
 
-
-
 ; Parameters specific for the 'evaluate_seqs' tool.
 [EVALUATE_SEQS]
-
-; The allele value to use when allele information from the input date should
-; not be used.
+; The allele value to use when allele information from the input date should not be used.
 ALLELE = 01
