updated evaluate seqs command, file name and config value

--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -42,7 +42,7 @@ V_MOTIFS = TGT,TGC
 ; The default search motifs for the J gene.
 J_MOTIFS = TGG,TTC,TTT
 
-; Parameters specific for the 'evaluate_seqs' tool.
-[EVALUATE_SEQS]
+; Parameters specific for the 'evaluate_sequences' tool.
+[EVALUATE_SEQUENCES]
 ; The allele value to use when allele information from the input date should not be used.
 ALLELE = 01
