--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -18,6 +18,8 @@ TEMP_DIR = immuno_probs_tmp
 
 ; Common parameters used for multiple tools in ImmunoProbs.
 [COMMON]
+; The allele value to use when allele information from the input data should not be used.
+ALLELE = 01
 ; Name of the column containing the sequence indices.
 I_COL = seq_index
 ; Name of the column containing the nucleotide sequences.
@@ -29,11 +31,9 @@ AA_COL = aa_sequence
 ; Name of the column containing the amino acid pgen scores.
 AA_P_COL = aa_pgen_estimate
 ; Name of the column containing the V gene choice string.
-V_GENE_COL = gene_choice_v
-; Name of the column containing the D gene choice string.
-D_GENE_COL = gene_choice_d
+V_GENE_CHOICE_COL = gene_choice_v
 ; Name of the column containing the J gene choice string.
-J_GENE_COL = gene_choice_j
+J_GENE_CHOICE_COL = gene_choice_j
 
 ; Parameters specific for the 'locate' tool.
 [LOCATE]
@@ -42,7 +42,22 @@ V_MOTIFS = TGT,TGC
 ; The default search motifs for the J gene.
 J_MOTIFS = TGG,TTC,TTT
 
-; Parameters specific for the 'evaluate' tool.
-[EVALUATE]
-; The allele value to use when allele information from the input date should not be used.
-ALLELE = 01
+; Parameters specific for the 'extract' tool.
+[EXTRACT]
+; Name of the column specifying the frame type of the sequences.
+FRAME_TYPE_COL = frame_type
+; Name of the column specifying the length of the CDR3 sequences.
+CDR3_LENGTH_COL = cdr3_length
+; Name of the column containing the V family name string.
+V_FAMILY_COL = v_family
+; Name of the column containing the V gene name string.
+V_GENE_COL = v_gene
+; Name of the column containing the J family name string.
+J_FAMILY_COL = j_family
+; Name of the column containing the J gene name string.
+J_GENE_COL = j_gene
+
+; Parameters specific for the 'generate' tool.
+[GENERATE]
+; Name of the column containing the D gene choice string.
+D_GENE_CHOICE_COL = gene_choice_d
