--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -31,9 +31,9 @@ AA_COL = aa_sequence
 ; Name of the column containing the amino acid pgen scores.
 AA_P_COL = aa_pgen_estimate
 ; Name of the column containing the V gene choice string.
-V_GENE_CHOICE_COL = gene_choice_v
+V_GENE_CHOICE_COL = v_gene_choice
 ; Name of the column containing the J gene choice string.
-J_GENE_CHOICE_COL = gene_choice_j
+J_GENE_CHOICE_COL = j_gene_choice
 
 ; Parameters specific for the 'locate' tool.
 [LOCATE]
@@ -44,20 +44,20 @@ J_MOTIFS = TGG,TTC,TTT
 
 ; Parameters specific for the 'extract' tool.
 [EXTRACT]
+; The name of the column to use that identifies the each row in the input file.
+ROW_ID_COL = row_id
+; The column name to use for the sequence filename idetifier.
+FILE_NAME_ID_COL = file_name_id
 ; Name of the column specifying the frame type of the sequences.
 FRAME_TYPE_COL = frame_type
 ; Name of the column specifying the length of the CDR3 sequences.
 CDR3_LENGTH_COL = cdr3_length
-; Name of the column containing the V family name string.
-V_FAMILY_COL = v_family
-; Name of the column containing the V gene name string.
-V_GENE_COL = v_gene
-; Name of the column containing the J family name string.
-J_FAMILY_COL = j_family
-; Name of the column containing the J gene name string.
-J_GENE_COL = j_gene
+; Name of the column containing the resolved V gene name string.
+V_RESOLVED_COL = v_resolved
+; Name of the column containing the resolved J gene name string.
+J_RESOLVED_COL = j_resolved
 
 ; Parameters specific for the 'generate' tool.
 [GENERATE]
 ; Name of the column containing the D gene choice string.
-D_GENE_CHOICE_COL = gene_choice_d
+D_GENE_CHOICE_COL = d_gene_choice
