rename of extract to convert

--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -42,8 +42,8 @@ V_MOTIFS = TGT,TGC
 ; The default search motifs for the J gene.
 J_MOTIFS = TGG,TTC,TTT
 
-; Parameters specific for the 'extract' tool.
-[EXTRACT]
+; Parameters specific for the 'convert' tool.
+[CONVERT]
 ; The name of the column to use that identifies the each row in the input file.
 ROW_ID_COL = row_id
 ; The column name to use for the sequence filename idetifier.
