Made removal of tmp dir optional + some small bug fixes

--- a/immuno_probs/config/default.ini
+++ b/immuno_probs/config/default.ini
@@ -78,5 +78,7 @@ USE_ALLELE = false
 [EXPERT]
 ; Should ImmunoProbs use the system's temporary directory (default) or use the WORKING_DIR location?
 USE_SYSTEM_TEMP = true
+; Should ImmunoProbs use remove the temporary working directory after execution?
+REMOVE_TEMP_DIR = true
 ; The name of the temporary directory used by ImmunoProbs.
 TEMP_DIR = immuno_probs_tmp
