--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ author_email = wout.van.helvoirt@icloud.com
 description = Create IGoR models and calculate the generation probability of V(D)J and CDR3 sequences.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-license_file = LICENSE.txt
+license_file = LICENSE
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
