--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ install_requires =
 development =
     pytest>=3.8.2
     twine>=1.12.1
+    flake8==3.7.9
     sphinx>=1.8.5
     sphinx-rtd-theme>=0.4.3
 
