--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
         sudo apt-get install muscle
         python -m pip install --upgrade pip
         pip install --upgrade setuptools
+        pip install numpy==1.16.5 # to resolve pandas install issue for now...
         pip install -r requirements.txt
     - name: Test with flake8 and pytest
       run: |
