small workflow update

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,8 @@ name: build
 
 on:
   push:
-    branches:
-      - master
-      - /^issue-[0-9]+.*$/
+    branches-ignore:
+      - gh-pages
 
 jobs:
   test:
