--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: build
+name: test
 
 on:
   push:
@@ -16,10 +16,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         sudo apt-get install muscle
@@ -27,6 +29,9 @@ jobs:
         pip install --upgrade setuptools
         pip install numpy==1.16.5 # to resolve pandas install issue for now...
         pip install -r requirements.txt
+
     - name: Test with flake8 and pytest
       run: |
-        make test
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        python -m pytest -v tests
