--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,6 +15,18 @@ jobs:
     - name: Checkout branch
       uses: actions/checkout@v1
 
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install --upgrade setuptools
+        pip install sphinx==1.8.5
+        pip install sphinx-rtd-theme>=0.4.3
+
     - name: Build documentation
       working-directory: docs
       run: make html
