--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install --upgrade setuptools
         pip install numpy==1.16.5 # to resolve pandas install issue for now...
+        pip install flake8>=3.7.9
+        pip install pytest==4.6.6
         pip install -r requirements.txt
 
     - name: Test with flake8
