--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,26 +15,28 @@ jobs:
     - name: Checkout branch
       uses: actions/checkout@v1
 
-    - name: Set up Python 3.7
+    - name: Set up Python 2.7
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 2.7
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install --upgrade setuptools
+        pip install numpy==1.16.5 # to resolve pandas install issue for now...
         pip install sphinx==1.8.5
         pip install sphinx-rtd-theme>=0.4.3
+        pip install -r requirements.txt
 
     - name: Build documentation
-      working-directory: docs
-      run: make html
+      run: |
+        cd docs
+        make html
 
     - name: Deploy to GitHub pages
-      uses: JamesIves/github-pages-deploy-action@releases/v3
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BASE_BRANCH: master
-        BRANCH: gh-pages
-        FOLDER: docs/_build/html
+      uses: peaceiris/actions-gh-pages@v2
+      env:
+        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: ./docs/_build/html
