Small fixes and removal of Makefile

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -35,6 +35,7 @@ jobs:
         make html
 
     - name: Deploy to GitHub pages
+      if: success()
       uses: peaceiris/actions-gh-pages@v2
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
